@@ -1,8 +1,13 @@
+2008-01-24  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/Ops.R (.Arith.Csparse): new utility factored out of former
+	  <dgC> o <dgC>, extended for triangular and also used in  <dtC> o <dtC>.
+
 2008-01-23  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* tests/factorizing.R (checkSchur): and more tests for checking Schur()
 
-	* inst/test-tools.R (isOrthogonal): new function; also re-sort file structure
+	* inst/test-tools.R (isOrthogonal): new function; also file restructured
 
 2008-01-22  Martin Maechler  <maechler@stat.math.ethz.ch>
 
